Added multiple semesters

--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@ table, th, td {
 	  <button onclick="resetSap()" type="button" id="resetSap" disabled="true">Reset</button>
   </p>
   <p id="result"></p>
-  <p id="classes"></p>
+  <p id="semesters"></p>
   <p id="classesResults"></p>
   <p id="finalizedPlan"></p>
 </body>
